--- a/styles.css
+++ b/styles.css
@@ -15,15 +15,15 @@ body {
 }
 
 h1 {
-  margin: 30px;
+  margin: 20px auto 0;
   font-family: 'Lobster', cursive;
   text-shadow: 5px 0 #232931;
-  font-size: 8rem;
+  font-size: 6rem;
   color: #F7D716;
 }
 
 p {
-  font-size: 2rem;
+  font-size: 3rem;
   color: #F7D716;
   text-shadow: 3px 0 #232931;
   font-family: 'Indie Flower', cursive;
@@ -38,5 +38,6 @@ footer {
   color: #EEEEEE;
   text-align: center;
   font-family: 'Indie Flower', cursive;
+  font-size: 2rem;
 
 }
